--- a/portaljcr/WebContent/resources/css/custom.css
+++ b/portaljcr/WebContent/resources/css/custom.css
@@ -32,7 +32,7 @@
 }
 
 .ui-state-highlight .ui-icon {
-    background-image: url(/nfsejcr/javax.faces.resource/images/ui-icons_333333_256x240.png.xhtml?ln=primefaces-bootstrap);
+    background-image: url(/portaljcr/javax.faces.resource/images/ui-icons_333333_256x240.png.xhtml?ln=primefaces-bootstrap);
 }
 
 .acessoRapidoBox {
