--- a/portaljcr/WebContent/pages/templates/layout.xhtml
+++ b/portaljcr/WebContent/pages/templates/layout.xhtml
@@ -20,7 +20,7 @@
 	<h:outputStylesheet library="css" name="custom.css"/>
 	<ui:insert name="head" />
 </h:head>
-<h:body styleClass="hold-transition skin-red-light sidebar-collapse  sidebar-mini">
+<h:body styleClass="hold-transition skin-red-light sidebar-mini">
 	<div class="wrapper">
 		<ui:include src="/pages/templates/header.xhtml" />
 		<aside class="main-sidebar"> 
