--- a/portaljcr/WebContent/pages/templates/menu.xhtml
+++ b/portaljcr/WebContent/pages/templates/menu.xhtml
@@ -50,6 +50,12 @@
 							<span>Usuários</span>
 						</p:link>
 					</li>
+					<li class="#{activeSubmenu eq 'coligadas' ? 'active' : ''}">
+						<p:link href="/pages/administrador/coligada/listar_coligada.xhtml" ajax="false">
+							<i class="fa fa-building"></i>
+							<span>Coligadas</span>
+						</p:link>
+					</li>
 				</ul>
 			</li>
 			
