--- a/portaljcr/WebContent/pages/templates/menu.xhtml
+++ b/portaljcr/WebContent/pages/templates/menu.xhtml
@@ -87,7 +87,7 @@
 					</li>
 					<li class="#{activeSubmenu eq 'grupoCotacao' ? 'active' : ''}">
 						<p:link href="/pages/administrador/grupoCotacao/listar_grupoCotacao.xhtml" ajax="false">
-							<i class="fa fa-group"></i>
+							<i class="fa fa-pencil-square"></i>
 							<span>Grupos de Cotação</span>
 						</p:link>
 					</li>
