--- a/portaljcr/WebContent/pages/templates/menu.xhtml
+++ b/portaljcr/WebContent/pages/templates/menu.xhtml
@@ -34,7 +34,7 @@
 <!-- 				</p:link> -->
 <!-- 			</li> -->
 
-			<li class="treeview #{activeMenu eq 'solicitacaoCompra' ? 'active' : ''}">
+			<li class="treeview #{activeMenu eq 'solicitacaoCompra' ? 'active' : ''}" jsf:rendered="false">
 				<a href="#"> 
 					<i class="fa fa-shopping-cart"></i> <span>Solicitação de Compra</span>
 					 <span class="pull-right-container">
@@ -57,7 +57,7 @@
 				</ul>
 			</li>
 			
-			<li class="treeview #{activeMenu eq 'cotacao' ? 'active' : ''}" jsf:rendered="#{loginController.hasGroup(['ADMINISTRADOR', 'COTACAO'])}">
+			<li class="treeview #{activeMenu eq 'cotacao' ? 'active' : ''}" jsf:rendered="false">
 				<a href="#"> 
 					<i class="fa fa-pencil-square-o"></i> <span>Cotação</span>
 					 <span class="pull-right-container">
@@ -75,6 +75,41 @@
 						<p:link href="/pages/solicitacaoCompra/solicitacao/listar_solicitacao.xhtml" ajax="false">
 							<i class="fa fa-calculator"></i>
 							<span>Cotações Pendentes</span>
+						</p:link>
+					</li>
+				</ul>
+			</li>
+
+			<li class="treeview #{activeMenu eq 'suporte' ? 'active' : ''}">
+				<a href="#"> 
+					<i class="fa fa-wrench"></i> <span>Suporte TI</span>
+					 <span class="pull-right-container">
+	                 	<i class="fa fa-angle-left pull-right"></i>
+	                 </span>
+				</a>
+				<ul class="treeview-menu">
+					<li class="#{activeSubmenu eq 'minhasSolicitacoes' ? 'active' : ''}">
+						<p:link href="/pages/solicitacaoCompra/solicitacao/listar_solicitacao.xhtml" ajax="false">
+							<i class="fa fa-reorder"></i>
+							<span>Painel de Chamados</span>
+						</p:link>
+					</li>
+					<li class="#{activeSubmenu eq 'novaSolicitacao' ? 'active' : ''}">
+						<p:link href="/pages/solicitacaoCompra/solicitacao/editar_solicitacao.xhtml" ajax="false">
+							<i class="fa fa-plus-square"></i>
+							<span>Novo Chamado</span>
+						</p:link>
+					</li>
+					<li class="#{activeSubmenu eq 'minhasSolicitacoes' ? 'active' : ''}">
+						<p:link href="/pages/solicitacaoCompra/solicitacao/listar_solicitacao.xhtml" ajax="false">
+							<i class="fa fa-newspaper-o"></i>
+							<span>Meus Chamados</span>
+						</p:link>
+					</li>
+					<li class="#{activeSubmenu eq 'minhasSolicitacoes' ? 'active' : ''}">
+						<p:link href="/pages/solicitacaoCompra/solicitacao/listar_solicitacao.xhtml" ajax="false">
+							<i class="fa fa-bar-chart"></i>
+							<span>Relatório de Chamados</span>
 						</p:link>
 					</li>
 				</ul>
