Painel de Aprovação

--- a/portaljcr/WebContent/pages/templates/menu.xhtml
+++ b/portaljcr/WebContent/pages/templates/menu.xhtml
@@ -88,8 +88,8 @@
 	                 </span>
 				</a>
 				<ul class="treeview-menu">
-					<li class="#{activeSubmenu eq 'minhasSolicitacoes' ? 'active' : ''}">
-						<p:link href="/pages/solicitacaoCompra/solicitacao/listar_solicitacao.xhtml" ajax="false">
+					<li class="#{activeSubmenu eq 'painelChamado' ? 'active' : ''}">
+						<p:link href="/pages/suporte/painel_chamado.xhtml" ajax="false">
 							<i class="fa fa-reorder"></i>
 							<span>Painel de Chamados</span>
 						</p:link>
