Solicitação de Compra

--- a/portaljcr/WebContent/pages/templates/menu.xhtml
+++ b/portaljcr/WebContent/pages/templates/menu.xhtml
@@ -34,7 +34,7 @@
 <!-- 				</p:link> -->
 <!-- 			</li> -->
 
-			<li class="treeview #{activeMenu eq 'solicitacaoCompra' ? 'active' : ''}" jsf:rendered="false">
+			<li class="treeview #{activeMenu eq 'solicitacaoCompra' ? 'active' : ''}" jsf:rendered="true">
 				<a href="#"> 
 					<i class="fa fa-shopping-cart"></i> <span>Solicitação de Compra</span>
 					 <span class="pull-right-container">
