--- a/portaljcr/WebContent/resources/css/custom.css
+++ b/portaljcr/WebContent/resources/css/custom.css
@@ -68,3 +68,36 @@
 .chamadoLink:hover {
 	text-decoration: underline;
 }
+
+.ui-selectonemenu label.ui-selectonemenu-label {
+    cursor: pointer !important;
+    padding-left: 18px !important;
+}
+
+.ui-selectonemenu-filter-container {
+    width: 115% !important;
+}
+
+.ui-selectonemenu-panel .ui-selectonemenu-filter-container .ui-icon {
+    right: 100px !important;
+}
+
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
+    border-color: #ccc !important;
+    /* border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25); */
+}
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
+	border-radius: 0px !important
+}
+
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
+	border-color: #d2d6de !important;
+}
+
+.ui-fluid .ui-selectonemenu {
+    min-width: 0px !important;
+}
+
+.ui-selectonemenu-panel .ui-selectonemenu-filter-container .ui-icon {
+    display: none !important;
+}
