--- a/portaljcr/WebContent/pages/templates/layout.xhtml
+++ b/portaljcr/WebContent/pages/templates/layout.xhtml
@@ -32,6 +32,10 @@
 				<ui:insert name="pageTitle" />
 				<small><ui:insert name="pageDescription" /></small>
 			</h1>
+			<ol class="breadcrumb">
+		        <li><i class="fa fa-home"></i> Portal JCR</li>
+	      		<ui:insert name="breadcrumb" />
+	      	</ol>
 			</section>
 			<section class="content">
 			<div class="row" jsf:id="divMessage">
