Solicitação de Compra

--- a/portaljcr/WebContent/pages/templates/layout.xhtml
+++ b/portaljcr/WebContent/pages/templates/layout.xhtml
@@ -49,7 +49,7 @@
 							<h:graphicImage name="/images/ajax_loader_red.gif" />
 					</p:dialog>
 					<p:ajaxStatus onstart="PF('statusDialog').show()"
-						onsuccess="PF('statusDialog').hide()" />
+						onsuccess="PF('statusDialog').hide();window.scrollTo(0,0);" />
 				</div>
 			</div>
 			<ui:insert name="body" /> </section>
