--- a/portaljcr/WebContent/resources/css/custom.css
+++ b/portaljcr/WebContent/resources/css/custom.css
@@ -119,3 +119,7 @@
 .ui-fluid .ui-inputtext {
     height: 34px !important;
 }
+
+.ui-inputfield, .ui-widget-content .ui-inputfield, .ui-widget-header .ui-inputfield {
+	padding-left: 12px;
+}
