--- a/portaljcr/WebContent/pages/templates/menu.xhtml
+++ b/portaljcr/WebContent/pages/templates/menu.xhtml
@@ -88,25 +88,25 @@
 	                 </span>
 				</a>
 				<ul class="treeview-menu">
-					<li class="#{activeSubmenu eq 'painelChamado' ? 'active' : ''}">
+					<li class="#{activeSubmenu eq 'painelChamado' ? 'active' : ''}" jsf:rendered="#{loginController.hasGroup(['ADMINISTRADOR', 'SUPORTE'])}">
 						<p:link href="/pages/suporte/painel_chamado.xhtml" ajax="false">
 							<i class="fa fa-reorder"></i>
 							<span>Painel de Chamados</span>
 						</p:link>
 					</li>
-					<li class="#{activeSubmenu eq 'novaSolicitacao' ? 'active' : ''}">
+					<li class="#{activeSubmenu eq 'novoChamado' ? 'active' : ''}">
 						<p:link href="/pages/suporte/novo_chamado.xhtml" ajax="false">
 							<i class="fa fa-plus-square"></i>
 							<span>Novo Chamado</span>
 						</p:link>
 					</li>
-					<li class="#{activeSubmenu eq 'minhasSolicitacoes' ? 'active' : ''}">
-						<p:link href="/pages/solicitacaoCompra/solicitacao/listar_solicitacao.xhtml" ajax="false">
+					<li class="#{activeSubmenu eq 'meusChamados' ? 'active' : ''}">
+						<p:link href="/pages/suporte/listar_chamado.xhtml" ajax="false">
 							<i class="fa fa-newspaper-o"></i>
 							<span>Meus Chamados</span>
 						</p:link>
 					</li>
-					<li class="#{activeSubmenu eq 'minhasSolicitacoes' ? 'active' : ''}">
+					<li class="#{activeSubmenu eq 'relatorioChamado' ? 'active' : ''}" jsf:rendered="#{loginController.hasGroup(['ADMINISTRADOR', 'SUPORTE', 'GERENTE DE TI'])}">
 						<p:link href="/pages/solicitacaoCompra/solicitacao/listar_solicitacao.xhtml" ajax="false">
 							<i class="fa fa-bar-chart"></i>
 							<span>Relatório de Chamados</span>
