--- a/portaljcr/WebContent/resources/css/custom.css
+++ b/portaljcr/WebContent/resources/css/custom.css
@@ -123,3 +123,11 @@
 .ui-inputfield, .ui-widget-content .ui-inputfield, .ui-widget-header .ui-inputfield {
 	padding-left: 12px;
 }
+
+.ui-selectmanycheckbox label {
+	font-weight: normal !important;	
+}
+
+.nav-tabs-custom-relatorio {
+    background: none !important;
+}
