--- a/portaljcr/WebContent/pages/templates/menu.xhtml
+++ b/portaljcr/WebContent/pages/templates/menu.xhtml
@@ -67,8 +67,8 @@
 				<ul class="treeview-menu">
 					<li class="#{activeSubmenu eq 'cotacaoPendente' ? 'active' : ''}">
 						<p:link href="/pages/solicitacaoCompra/cotacao/listar_cotacaoPendente.xhtml" ajax="false">
-							<i class="fa fa-calculator"></i>
-							<span>Cotações Pendentes</span>
+							<i class="fa fa-paste"></i>
+							<span>Solicitações Pendentes</span>
 						</p:link>
 					</li>
 				</ul>
