--- a/portaljcr/WebContent/pages/templates/menu.xhtml
+++ b/portaljcr/WebContent/pages/templates/menu.xhtml
@@ -74,7 +74,7 @@
 					<li class="#{activeSubmenu eq 'minhasCotacoes' ? 'active' : ''}">
 						<p:link href="/pages/solicitacaoCompra/cotacao/listar_minhasCotacoes.xhtml" ajax="false">
 							<i class="fa fa-calculator"></i>
-							<span>Minhas Cotações</span>
+							<span>Cotações</span>
 						</p:link>
 					</li>
 				</ul>
