--- a/portaljcr/WebContent/resources/css/custom.css
+++ b/portaljcr/WebContent/resources/css/custom.css
@@ -159,7 +159,7 @@
     margin-top: 2px !important; 
 }
 
-.button-login {
+.btn-vermelho {
   font-family: "Roboto", sans-serif !important;
   text-transform: uppercase !important;
   outline: 0 !important;
@@ -174,6 +174,82 @@
   cursor: pointer !important;
 }
 
-.button-login:hover,.button-login:active,.button-login:focus {
+.btn-vermelho:hover,.btn-vermelho:active,.btn-vermelho:focus {
   background: #CC343D !important;
+}
+
+.btn-verde {
+  font-family: "Roboto", sans-serif !important;
+  text-transform: uppercase !important;
+  outline: 0 !important;
+  background: #00a65a !important;
+  padding: 5px !important;
+  width: 100% !important;
+  border: 0 !important;
+  color: #FFFFFF !important;
+  font-size: 14px !important;
+  -webkit-transition: all 0.3 ease !important;
+  transition: all 0.3 ease !important;
+  cursor: pointer !important;
+}
+
+.btn-verde:hover,.btn-verde:active,.btn-verde:focus {
+  background: #00bf69 !important;
+}
+
+.btn-cinza {
+  font-family: "Roboto", sans-serif !important;
+  text-transform: uppercase !important;
+  outline: 0 !important;
+  background: #666666 !important;
+  padding: 5px !important;
+  width: 100% !important;
+  border: 0 !important;
+  color: #FFFFFF !important;
+  font-size: 14px !important;
+  -webkit-transition: all 0.3 ease !important;
+  transition: all 0.3 ease !important;
+  cursor: pointer !important;
+}
+
+.btn-cinza:hover,.btn-cinza:active,.btn-cinza:focus {
+  background: #868686 !important;
+}
+
+.btn-azul {
+  font-family: "Roboto", sans-serif !important;
+  text-transform: uppercase !important;
+  outline: 0 !important;
+  background: #3c8dbc !important;
+  padding: 5px !important;
+  width: 100% !important;
+  border: 0 !important;
+  color: #FFFFFF !important;
+  font-size: 14px !important;
+  -webkit-transition: all 0.3 ease !important;
+  transition: all 0.3 ease !important;
+  cursor: pointer !important;
+}
+
+.btn-azul:hover,.btn-azul:active,.btn-azul:focus {
+  background: #317299 !important;
+}
+
+.btn-vermelho-claro {
+  font-family: "Roboto", sans-serif !important;
+  text-transform: uppercase !important;
+  outline: 0 !important;
+  background: #dd4b39 !important;
+  padding: 5px !important;
+  width: 100% !important;
+  border: 0 !important;
+  color: #FFFFFF !important;
+  font-size: 14px !important;
+  -webkit-transition: all 0.3 ease !important;
+  transition: all 0.3 ease !important;
+  cursor: pointer !important;
+}
+
+.btn-vermelho-claro:hover,.btn-vermelho-claro:active,.btn-vermelho-claro:focus {
+  background: #c63222 !important;
 }
