--- a/portaljcr/WebContent/pages/templates/menu.xhtml
+++ b/portaljcr/WebContent/pages/templates/menu.xhtml
@@ -77,6 +77,12 @@
 							<span>Cotações</span>
 						</p:link>
 					</li>
+					<li class="#{activeSubmenu eq 'gerarOrdemCompra' ? 'active' : ''}">
+						<p:link href="/pages/solicitacaoCompra/cotacao/listar_minhasCotacoes.xhtml" ajax="false">
+							<i class="fa fa-dollar"></i>
+							<span>Gerar Ordem de Compra</span>
+						</p:link>
+					</li>
 				</ul>
 			</li>
 
