--- a/portaljcr/WebContent/resources/css/custom.css
+++ b/portaljcr/WebContent/resources/css/custom.css
@@ -137,7 +137,14 @@
 }
 
 .cotacaoMelhorOpcao {
-	background-color: #aaffaa;
+	background-color: #00a65a;
+	color: #fff !important;
+	font-weight: bold;
+	border: 1px solid #00a65a;
+}
+
+.cotacaoMelhorOpcao span {
+	color: #fff !important;
 }
 
 .text-cotacao-vencida {
