--- a/portaljcr/WebContent/resources/css/custom.css
+++ b/portaljcr/WebContent/resources/css/custom.css
@@ -1,43 +1,46 @@
 .ui-radiobutton-icon {
-    margin-left: 0px !important;
-    margin-top: -1px !important;
+	margin-left: 0px !important;
+	margin-top: -1px !important;
 }
 
-.ui-widget,   
-    .ui-widget .ui-widget {   
-    font-family: 'Roboto',sans-serif !important; 
+.ui-widget, .ui-widget .ui-widget {
+	font-family: 'Roboto', sans-serif !important;
 }
 
 .font-normal {
 	font-weight: normal !important;
 }
 
-.alinhada  {
+.alinhada {
 	margin: 0 auto;
 	width: 50%; /* Valor da Largura */
 }
 
-.ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight {
-    color: #ffffff;
-    text-decoration: none;
-    background-color: #9F262D;
-    background-position: 0px;
-    background-image: -moz-linear-gradient(top, #dd4b39, #9F262D);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#dd4b39), to(#9F262D));
-    background-image: -webkit-linear-gradient(top, #dd4b39, #9F262D);
-    background-image: -o-linear-gradient(top, #dd4b39, #9F262D);
-    background-image: linear-gradient(to bottom, #dd4b39, #9F262D);
-    background-repeat: repeat-x;
-    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0);
+.ui-state-highlight, .ui-widget-content .ui-state-highlight,
+	.ui-widget-header .ui-state-highlight {
+	color: #ffffff;
+	text-decoration: none;
+	background-color: #9F262D;
+	background-position: 0px;
+	background-image: -moz-linear-gradient(top, #dd4b39, #9F262D);
+	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#dd4b39),
+		to(#9F262D));
+	background-image: -webkit-linear-gradient(top, #dd4b39, #9F262D);
+	background-image: -o-linear-gradient(top, #dd4b39, #9F262D);
+	background-image: linear-gradient(to bottom, #dd4b39, #9F262D);
+	background-repeat: repeat-x;
+	filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ff0088cc',
+		endColorstr='#ff0077b3', GradientType=0);
 }
 
 .ui-state-highlight .ui-icon {
-    background-image: url(/portaljcr/javax.faces.resource/images/ui-icons_333333_256x240.png.xhtml?ln=primefaces-bootstrap);
+	background-image:
+		url(/portaljcr/javax.faces.resource/images/ui-icons_333333_256x240.png.xhtml?ln=primefaces-bootstrap);
 }
 
 .acessoRapidoBox {
 	font-size: 11px;
-	padding-top:33px;
+	padding-top: 33px;
 	font-weight: bold;
 	text-align: center;
 }
@@ -70,38 +73,40 @@
 }
 
 .ui-selectonemenu label.ui-selectonemenu-label {
-    cursor: pointer !important;
-    padding-left: 16px !important;
-    padding-top: 8px !important;
+	cursor: pointer !important;
+	padding-left: 16px !important;
+	padding-top: 8px !important;
 }
 
 .ui-selectonemenu-filter-container {
-    width: 115% !important;
+	width: 115% !important;
 }
 
 .ui-selectonemenu-panel .ui-selectonemenu-filter-container .ui-icon {
-    right: 100px !important;
+	right: 100px !important;
 }
 
-.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
-    border-color: #ccc !important;
-    /* border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25); */
+.ui-state-default, .ui-widget-content .ui-state-default,
+	.ui-widget-header .ui-state-default {
+	border-color: #ccc !important;
+	/* border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25); */
 }
 
-.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
+.ui-state-default, .ui-widget-content .ui-state-default,
+	.ui-widget-header .ui-state-default {
 	border-color: #d2d6de !important;
 }
 
 .ui-fluid .ui-selectonemenu {
-    min-width: 0px !important;
+	min-width: 0px !important;
 }
 
 .ui-selectonemenu-panel .ui-selectonemenu-filter {
-    width: 87% !important;
+	width: 87% !important;
 }
 
 .ui-selectonemenu-panel .ui-selectonemenu-filter-container .ui-icon {
-    display: none !important;
+	display: none !important;
 }
 
 .alinharRadio {
@@ -109,27 +114,28 @@
 }
 
 .ui-fluid .ui-autocomplete, .ui-fluid .ui-autocomplete-input {
-    height: 34px !important;
+	height: 34px !important;
 }
 
 .ui-inputfield {
-    height: 34px !important;
+	height: 34px !important;
 }
 
 .ui-fluid .ui-inputtext {
-    height: 34px !important;
+	height: 34px !important;
 }
 
-.ui-inputfield, .ui-widget-content .ui-inputfield, .ui-widget-header .ui-inputfield {
+.ui-inputfield, .ui-widget-content .ui-inputfield, .ui-widget-header .ui-inputfield
+	{
 	padding-left: 12px;
 }
 
 .ui-selectmanycheckbox label {
-	font-weight: normal !important;	
+	font-weight: normal !important;
 }
 
-.nav-tabs-custom-relatorio {	
-    background: none !important;
+.nav-tabs-custom-relatorio {
+	background: none !important;
 }
 
 .cotacaoVencida {
@@ -148,7 +154,7 @@
 }
 
 .text-cotacao-vencida {
-	color:#ffe6e6 !important
+	color: #ffe6e6 !important
 }
 
 .valorTotalVerde {
@@ -163,104 +169,307 @@
 }
 
 .ui-button-text-icon-left .ui-button-text {
-    margin-top: 2px !important; 
+	margin-top: 2px !important;
 }
 
 .btn-vermelho {
-  font-family: "Roboto", sans-serif !important;
-  text-transform: uppercase !important;
-  outline: 0 !important;
-  background: #9F262D !important;
-  padding: 5px !important;
-  width: 100% !important;
-  border: 0 !important;
-  color: #FFFFFF !important;
-  font-size: 14px !important;
-  -webkit-transition: all 0.3 ease !important;
-  transition: all 0.3 ease !important;
-  cursor: pointer !important;
+	font-family: "Roboto", sans-serif !important;
+	text-transform: uppercase !important;
+	outline: 0 !important;
+	background: #9F262D !important;
+	padding: 5px !important;
+	width: 100% !important;
+	border: 0 !important;
+	color: #FFFFFF !important;
+	font-size: 14px !important;
+	-webkit-transition: all 0.3 ease !important;
+	transition: all 0.3 ease !important;
+	cursor: pointer !important;
 }
 
-.btn-vermelho:hover,.btn-vermelho:active,.btn-vermelho:focus {
-  background: #CC343D !important;
+.btn-vermelho:hover, .btn-vermelho:active, .btn-vermelho:focus {
+	background: #CC343D !important;
 }
 
 .btn-verde {
-  font-family: "Roboto", sans-serif !important;
-  text-transform: uppercase !important;
-  outline: 0 !important;
-  background: #00a65a !important;
-  padding: 5px !important;
-  width: 100% !important;
-  border: 0 !important;
-  color: #FFFFFF !important;
-  font-size: 14px !important;
-  -webkit-transition: all 0.3 ease !important;
-  transition: all 0.3 ease !important;
-  cursor: pointer !important;
+	font-family: "Roboto", sans-serif !important;
+	text-transform: uppercase !important;
+	outline: 0 !important;
+	background: #00a65a !important;
+	padding: 5px !important;
+	width: 100% !important;
+	border: 0 !important;
+	color: #FFFFFF !important;
+	font-size: 14px !important;
+	-webkit-transition: all 0.3 ease !important;
+	transition: all 0.3 ease !important;
+	cursor: pointer !important;
 }
 
-.btn-verde:hover,.btn-verde:active,.btn-verde:focus {
-  background: #00bf69 !important;
+.btn-verde:hover, .btn-verde:active, .btn-verde:focus {
+	background: #00bf69 !important;
 }
 
 .btn-cinza {
-  font-family: "Roboto", sans-serif !important;
-  text-transform: uppercase !important;
-  outline: 0 !important;
-  background: #666666 !important;
-  padding: 5px !important;
-  width: 100% !important;
-  border: 0 !important;
-  color: #FFFFFF !important;
-  font-size: 14px !important;
-  -webkit-transition: all 0.3 ease !important;
-  transition: all 0.3 ease !important;
-  cursor: pointer !important;
+	font-family: "Roboto", sans-serif !important;
+	text-transform: uppercase !important;
+	outline: 0 !important;
+	background: #666666 !important;
+	padding: 5px !important;
+	width: 100% !important;
+	border: 0 !important;
+	color: #FFFFFF !important;
+	font-size: 14px !important;
+	-webkit-transition: all 0.3 ease !important;
+	transition: all 0.3 ease !important;
+	cursor: pointer !important;
 }
 
-.btn-cinza:hover,.btn-cinza:active,.btn-cinza:focus {
-  background: #868686 !important;
+.btn-cinza:hover, .btn-cinza:active, .btn-cinza:focus {
+	background: #868686 !important;
 }
 
 .btn-azul {
-  font-family: "Roboto", sans-serif !important;
-  text-transform: uppercase !important;
-  outline: 0 !important;
-  background: #3c8dbc !important;
-  padding: 5px !important;
-  width: 100% !important;
-  border: 0 !important;
-  color: #FFFFFF !important;
-  font-size: 14px !important;
-  -webkit-transition: all 0.3 ease !important;
-  transition: all 0.3 ease !important;
-  cursor: pointer !important;
+	font-family: "Roboto", sans-serif !important;
+	text-transform: uppercase !important;
+	outline: 0 !important;
+	background: #3c8dbc !important;
+	padding: 5px !important;
+	width: 100% !important;
+	border: 0 !important;
+	color: #FFFFFF !important;
+	font-size: 14px !important;
+	-webkit-transition: all 0.3 ease !important;
+	transition: all 0.3 ease !important;
+	cursor: pointer !important;
 }
 
-.btn-azul:hover,.btn-azul:active,.btn-azul:focus {
-  background: #317299 !important;
+.btn-azul:hover, .btn-azul:active, .btn-azul:focus {
+	background: #317299 !important;
 }
 
 .btn-vermelho-claro {
-  font-family: "Roboto", sans-serif !important;
-  text-transform: uppercase !important;
-  outline: 0 !important;
-  background: #dd4b39 !important;
-  padding: 5px !important;
-  width: 100% !important;
-  border: 0 !important;
-  color: #FFFFFF !important;
-  font-size: 14px !important;
-  -webkit-transition: all 0.3 ease !important;
-  transition: all 0.3 ease !important;
-  cursor: pointer !important;
+	font-family: "Roboto", sans-serif !important;
+	text-transform: uppercase !important;
+	outline: 0 !important;
+	background: #dd4b39 !important;
+	padding: 5px !important;
+	width: 100% !important;
+	border: 0 !important;
+	color: #FFFFFF !important;
+	font-size: 14px !important;
+	-webkit-transition: all 0.3 ease !important;
+	transition: all 0.3 ease !important;
+	cursor: pointer !important;
 }
 
-.btn-vermelho-claro:hover,.btn-vermelho-claro:active,.btn-vermelho-claro:focus {
-  background: #c63222 !important;
+.btn-vermelho-claro:hover, .btn-vermelho-claro:active,
+	.btn-vermelho-claro:focus {
+	background: #c63222 !important;
 }
 
 .ui-datatable tbody td {
-    padding: 6px 6px 4px 6px !important;
+	padding: 6px 6px 4px 6px !important;
+}
+
+.flexer, .progress-indicator {
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex
+}
+
+.no-flexer, .progress-indicator.stacked {
+	display: block
+}
+
+.no-flexer-element {
+	-ms-flex: 0;
+	-webkit-flex: 0;
+	-moz-flex: 0;
+	flex: 0
+}
+
+.flexer-element, .progress-indicator>li {
+	-ms-flex: 1;
+	-webkit-flex: 1;
+	-moz-flex: 1;
+	flex: 1
+}
+
+.progress-indicator {
+	margin: 0 0 1em;
+	padding: 0;
+	font-size: 80%;
+	text-transform: uppercase
+}
+
+.progress-indicator>li {
+	list-style: none;
+	text-align: center;
+	width: auto;
+	padding: 0;
+	margin: 0;
+	position: relative;
+	text-overflow: ellipsis;
+	color: #bbb;
+	display: block
+}
+
+.progress-indicator>li:hover {
+	color: #6f6f6f
+}
+
+.progress-indicator>li.completed, .progress-indicator>li.completed .bubble
+	{
+	color: #9F262D
+}
+
+.progress-indicator>li .bubble {
+	border-radius: 1000px;
+	width: 20px;
+	height: 20px;
+	background-color: #bbb;
+	display: block;
+	margin: 0 auto .5em;
+	border-bottom: 1px solid #888
+}
+
+.progress-indicator>li .bubble:after, .progress-indicator>li .bubble:before
+	{
+	display: block;
+	position: absolute;
+	top: 9px;
+	width: 100%;
+	height: 3px;
+	content: '';
+	background-color: #bbb
+}
+
+.progress-indicator>li.completed .bubble, .progress-indicator>li.completed .bubble:after,
+	.progress-indicator>li.completed .bubble:before {
+	background-color: #9F262D;
+	border-color: #247830
+}
+
+.progress-indicator>li .bubble:before {
+	left: 0
+}
+
+.progress-indicator>li .bubble:after {
+	right: 0
+}
+
+.progress-indicator>li:first-child .bubble:after, .progress-indicator>li:first-child .bubble:before
+	{
+	width: 50%;
+	margin-left: 50%
+}
+
+.progress-indicator>li:last-child .bubble:after, .progress-indicator>li:last-child .bubble:before
+	{
+	width: 50%;
+	margin-right: 50%
+}
+
+.progress-indicator>li.active, .progress-indicator>li.active .bubble {
+	color: #337AB7
+}
+
+.progress-indicator>li.active .bubble, .progress-indicator>li.active .bubble:after,
+	.progress-indicator>li.active .bubble:before {
+	background-color: #337AB7;
+	border-color: #122a3f
+}
+
+.progress-indicator>li a:hover .bubble, .progress-indicator>li a:hover .bubble:after,
+	.progress-indicator>li a:hover .bubble:before {
+	background-color: #5671d0;
+	border-color: #1f306e
+}
+
+.progress-indicator>li a:hover .bubble {
+	color: #5671d0
+}
+
+.progress-indicator>li.danger .bubble, .progress-indicator>li.danger .bubble:after,
+	.progress-indicator>li.danger .bubble:before {
+	background-color: #d3140f;
+	border-color: #440605
+}
+
+.progress-indicator>li.danger .bubble {
+	color: #d3140f
+}
+
+.progress-indicator>li.warning .bubble, .progress-indicator>li.warning .bubble:after,
+	.progress-indicator>li.warning .bubble:before {
+	background-color: #edb10a;
+	border-color: #5a4304
+}
+
+.progress-indicator>li.warning .bubble {
+	color: #edb10a
+}
+
+.progress-indicator>li.info .bubble, .progress-indicator>li.info .bubble:after,
+	.progress-indicator>li.info .bubble:before {
+	background-color: #5b32d6;
+	border-color: #25135d
+}
+
+.progress-indicator>li.info .bubble {
+	color: #5b32d6
+}
+
+.progress-indicator.stacked>li {
+	text-indent: -10px;
+	text-align: center;
+	display: block
+}
+
+.progress-indicator.stacked>li .bubble:after, .progress-indicator.stacked>li .bubble:before
+	{
+	left: 50%;
+	margin-left: -1.5px;
+	width: 3px;
+	height: 100%
+}
+
+.progress-indicator.stacked .stacked-text {
+	position: relative;
+	z-index: 10;
+	top: 0;
+	margin-left: 60% !important;
+	width: 45% !important;
+	display: inline-block;
+	text-align: left;
+	line-height: 1.2em
+}
+
+.progress-indicator.stacked>li a {
+	border: none
+}
+
+.progress-indicator.stacked.nocenter>li .bubble {
+	margin-left: 0;
+	margin-right: 0
+}
+
+.progress-indicator.stacked.nocenter>li .bubble:after,
+	.progress-indicator.stacked.nocenter>li .bubble:before {
+	left: 10px
+}
+
+.progress-indicator.stacked.nocenter .stacked-text {
+	width: auto !important;
+	display: block;
+	margin-left: 40px !important
+}
+
+@media handheld , screen and (max-width:400px) {
+	.progress-indicator {
+		font-size: 60%
+	}
 }
