--- a/portaljcr/WebContent/pages/templates/layout.xhtml
+++ b/portaljcr/WebContent/pages/templates/layout.xhtml
@@ -40,7 +40,7 @@
 			<section class="content">
 			<div class="row" jsf:id="divMessage">
 				<div class="col-md-12 col-sm-12 col-xs-12">
-					<p:messages id="messages" showDetail="true" closable="true" >
+					<p:messages id="messages" showDetail="true" closable="true" escape="false" >
 						<p:autoUpdate />
 					</p:messages>
 <!-- 					 <p:growl autoUpdate="true" showDetail="false" id="g_mensagens" /> -->
