--- a/portaljcr/WebContent/resources/css/custom.css
+++ b/portaljcr/WebContent/resources/css/custom.css
@@ -376,3 +376,7 @@ ol.progress-meter li.todo:before {
 	margin-left: auto !important;
 	margin-right: auto !important;
 }
+
+.sem-header thead {
+	display: none;
+} 
